--- a/app/src/main/res/layout/activity_find_beer.xml
+++ b/app/src/main/res/layout/activity_find_beer.xml
@@ -9,9 +9,9 @@
         android:id="@+id/color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_gravity="center"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        android:layout_marginTop="40dp" />
 
     <Button
         android:id="@+id/find_beer"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="Button" />
+        android:text="@string/find_beer" />
 
     <TextView
         android:id="@+id/brands"
@@ -27,6 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="This is a text view" />
+        android:text="@string/brands" />
 
 </LinearLayout>
