--- a/app/src/main/res/layout/activity_find_beer.xml
+++ b/app/src/main/res/layout/activity_find_beer.xml
@@ -7,11 +7,12 @@
 
     <Spinner
         android:id="@+id/color"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:layout_marginTop="40dp" />
+        android:entries="@array/beer_colors"/>
 
     <Button
         android:id="@+id/find_beer"
@@ -19,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="@string/find_beer" />
+        android:text="@string/find_beer"
+        android:onClick="onClickFindBeer"/>
 
     <TextView
         android:id="@+id/brands"
