--- a/duck/src/main/res/layout/activity_main.xml
+++ b/duck/src/main/res/layout/activity_main.xml
@@ -14,11 +14,23 @@
         app:srcCompat="@drawable/duck"
         tools:ignore="ContentDescription" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textSize="20sp"
-        android:text="It's a duck!" />
+        android:orientation="vertical"
+        android:layout_gravity="bottom|end"
+        android:padding="16dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="It's a duck!" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="(not a real one)"/>
+    </LinearLayout>
 </FrameLayout>
